Stylize door descriptions

--- a/cellar.html
+++ b/cellar.html
@@ -26,55 +26,78 @@
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Sloped waterproof door</div>
+					<div class="card-text">
+						<div class="card-text-header">Sloped waterproof door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Custom made sloped door</div>
+					<div class="card-text">
+						<div class="card-text-header">Custom made sloped door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Flat heavy duty commercial cellar door</div>
+					<div class="card-text">
+						<div class="card-text-header">Flat heavy duty commercial cellar door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0013.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Our commercial cellar doors are douvle braced for extra strength</div>
+					<div class="card-text">
+						<div class="card-text-header">Commercial cellar door</div>
+						<div class="card-text-subtext">double braced for extra strength</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Quad door - replace your sloped door and increase yard space</div>
+					<div class="card-text">
+						<div class="card-text-header">Quad door</div>
+						<div class="card-text-subtext">replace your sloped door and increase yard space</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Water proof single door -perfect for Brooklyn coal chute</div>
+					<div class="card-text">
+						<div class="card-text-header">Water proof single door</div>
+						<div class="card-text-subtext">perfect for Brooklyn coal chute</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Bilco heavy duty aluminum door</div>
+					<div class="card-text">
+						<div class="card-text-header">Bilco heavy duty aluminum door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0014.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Cellar doors - Protective screen</div>
+					<div class="card-text">
+						<div class="card-text-header">Cellar door</div>
+						<div class="card-text-subtext">protective screen</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0015.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Prevent liability with our stairwell screen</div>
+					<div class="card-text">
+						<div class="card-text-header">Cellar door</div>
+						<div class="card-text-subtext">prevent liability with our stairwell screen</div>
+					</div>
 				</div>
 			</div>
 		</div>
