--- a/commercial.html
+++ b/commercial.html
@@ -25,37 +25,52 @@
 					<div class="card-img">
 						<img src="images/doors/0004.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Aluminum front</div>
+					<div class="card-text">
+						<div class="card-text-header">Aluminum front</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Medium stile store front door - aluminum/chrome finish</div>
+					<div class="card-text">
+						<div class="card-text-header">Medium stile store front door</div>
+						<div class="card-text-subtext">aluminum/chrome finish</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0012.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Narrow stile store front door - dark bronze finish</div>
+					<div class="card-text">
+						<div class="card-text-header">Narrow stile store front door</div>
+						<div class="card-text-subtext">dark bronze finish</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0008.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Fire rated door with lever handle</div>
+					<div class="card-text">
+						<div class="card-text-header">Fire rated door</div>
+						<div class="card-text-subtext">with lever handle</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Stainless steel doors</div>
+					<div class="card-text">
+						<div class="card-text-header">Stainless steel doors</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">????</div>
+					<div class="card-text">
+						<div class="card-text-header">????</div>
+					</div>
 				</div>
 			</div>
 			<hr/>
