--- a/fire.html
+++ b/fire.html
@@ -16,7 +16,7 @@
 			<div class="important-descriptor">
 				<div class="important-descriptor-title">Fire Rated Doors</div>
 				<div class="important-descriptor-description">
-					<p>Fire rated doors are required for emergency exits, boiler rooms, and apartment front doors. Fire rated doors are also available with decorative recessed panels which can be painted. We also carry wood veneer fire rated doors.</p>
+					Fire rated doors are required for emergency exits, boiler rooms, and apartment front doors. Fire rated doors are also available with decorative recessed panels which can be painted. We also carry wood veneer fire rated doors.
 				</div>
 			</div>
 			<div class="page-gallery">
@@ -24,55 +24,77 @@
 					<div class="card-img">
 						<img src="images/doors/0008.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Painted, lever handle</div>
+					<div class="card-text">
+						<div class="card-text-header">Painted, lever handle</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Recess panel doors - pre-war style</div>
+					<div class="card-text">
+						<div class="card-text-header">Recess panel door</div>
+						<div class="card-text-subtext">pre-war style</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/fire 03.JPG" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Wood veneer - wide variety of finishes</div>
+					<div class="card-text">
+						<div class="card-text-header">Wood veneer</div>
+						<div class="card-text-subtext">wide variety of finishes</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Sound resistant doors</div>
+					<div class="card-text">
+						<div class="card-text-header">Sound resistant door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Stainless steel</div>
+					<div class="card-text">
+						<div class="card-text-header">Stainless steel</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0009.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Boiler room door with fusible link vent</div>
+					<div class="card-text">
+						<div class="card-text-header">Boiler room door</div>
+						<div class="card-text-subtext">with fusible link vent</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0010.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Fire rated door with decorative applied molding</div>
+					<div class="card-text">
+						<div class="card-text-header">Fire rated door</div>
+						<div class="card-text-subtext">with decorative applied molding</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Double and oversized doors</div>
+					<div class="card-text">
+						<div class="card-text-header">Double and oversized doors</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Multiple recess panel door</div>
+					<div class="card-text">
+						<div class="card-text-header">Multiple recess panel door</div>
+					</div>
 				</div>
 			</div>
 		</div>
