--- a/gate.html
+++ b/gate.html
@@ -16,7 +16,7 @@
 			<div class="important-descriptor">
 				<div class="important-descriptor-title">Gate Doors</div>
 				<div class="important-descriptor-description">
-					<p>Our gate doors are custom made and affordable. Protect your home with elegance. Choose from our wide selection or custom design your own door.</p>
+					Our gate doors are custom made and affordable. Protect your home with elegance. Choose from our wide selection or custom design your own door.
 				</div>
 			</div>
 			<div class="page-gallery">
@@ -24,55 +24,76 @@
 					<div class="card-img">
 						<img src="images/doors/0007.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Alley gate door with panic bar for egress in case of fire</div>
+					<div class="card-text">
+						<div class="card-text-header">Alley gate door</div>
+						<div class="card-text-subtext">with panic bar for egress in case of fire</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0016.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Expanded metal gate</div>
+					<div class="card-text">
+						<div class="card-text-header">Expanded metal gate</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Fire department approved door gate - double sided lock not necessary</div>
+					<div class="card-text">
+						<div class="card-text-header">Fire department approved door gate</div>
+						<div class="card-text-subtext">double sided lock not necessary</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0017.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Basic door gate - no ornments</div>
+					<div class="card-text">
+						<div class="card-text-header">Basic door gate</div>
+						<div class="card-text-subtext">no ornaments</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0018.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Full entrance enclosure with gate door</div>
+					<div class="card-text">
+						<div class="card-text-header">Full entrance enclosure with gate door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Storm security door</div>
+					<div class="card-text">
+						<div class="card-text-header">Storm security door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0019.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Custom double gate door</div>
+					<div class="card-text">
+						<div class="card-text-header">Custom double gate door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0020.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Patio gate door</div>
+					<div class="card-text">
+						<div class="card-text-header">Patio gate door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">Matching window guards</div>
+					<div class="card-text">
+						<div class="card-text-header">Matching window guards</div>
+					</div>
 				</div>
 			</div>
 		</div>
