--- a/header.html
+++ b/header.html
@@ -12,7 +12,7 @@
 			<div style="font-size: 28px; font-weight: bold">646-703-3444</div>
 			<div>Phone quotes gladly provided!</div>
 			
-			<div><a class="alt-style-link" href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
+			<div><a href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
 			<div>Email us at: <span style="font-weight: bold">peter@emeralddoorsnyc.com</span></div>
 			
 		</div>
