--- a/index.html
+++ b/index.html
@@ -35,60 +35,84 @@
 				</div>
 			</div>
 			<div class="page-gallery">
-				<div class="page-gallery-item card">
+				<a class="page-gallery-item card" href="fire.html">
 					<div class="card-img">
 						<img src="images/doors/0001.jpg" class="img-responsive center-block">
 					</div>
-					<a href="fire.html"><div class="card-text">Fire rated door with panic device and 5x20 window</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Fire fated door</div>
+						<div class="card-text-subtext">with panic device and 5x20 window</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="fire.html">
 					<div class="card-img">
 						<img src="images/doors/0002.jpg" class="img-responsive center-block">
 					</div>
-					<a href="fire.html"><div class="card-text">Recess panel fire rated door (painted - two tone)</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Recess panel fire rated door</div>
+						<div class="card-text-subtext">painted - two tone</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="fire.html">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<a href="fire.html"><div class="card-text">Wood veneer fire rated door</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Wood veneer fire rated door</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="cellar.html">
 					<div class="card-img">
 						<img src="images/doors/0005.jpg" class="img-responsive center-block">
 					</div>
-					<a href="cellar.html"><div class="card-text">Cellar doors: waterproof, sloped or flat.  We make custom sizes - see our gallery</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Cellar doors: waterproof, sloped or flat</div>
+						<div class="card-text-subtext">we make custom sizes - see our gallery</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="commercial.html">
 					<div class="card-img">
 						<img src="images/doors/home 05.jpg" class="img-responsive center-block">
 					</div>
-					<a href="commercial.html"><div class="card-text">Heavy duty commercial doors</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Heavy duty commercial doors</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="gate.html">
 					<div class="card-img">
 						<img src="images/doors/0007.jpg" class="img-responsive center-block">
 					</div>
-					<a href="gate.html"><div class="card-text">Gate doors (see gallery)</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Gate doors</div>
+						<div class="card-text-subtext">see our gallery</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="commercial.html">
 					<div class="card-img">
 						<img src="images/doors/home 07.jpg" class="img-responsive center-block">
 					</div>
-					<a href="commercial.html"><div class="card-text">Store front glass doors / commercial doors (see our gallery)</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Store front glass doors / commercial doors</div>
+						<div class="card-text-subtext">see our gallery</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="soundresistant.html">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<a href="soundresistant.html"><div class="card-text">Sound resistant doors (see our gallery)</div></a>
-				</div>
-				<div class="page-gallery-item card">
+					<div class="card-text">
+						<div class="card-text-header">Sound resistant doors</div>
+						<div class="card-text-subtext">see our gallery</div>
+					</div>
+				</a>
+				<a class="page-gallery-item card" href="gate.html">
 					<div class="card-img">
 						<img src="images/doors/0003.jpg" class="img-responsive center-block">
 					</div>
-					<a href="gate.html"><div class="card-text">Commercial hardware, locks, intercom/buzzer systems installed</div></a>
-				</div>
+					<div class="card-text">
+						<div class="card-text-header">Commercial hardware, locks, intercom/buzzer systems installed</div>
+					</div>
+				</a>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
