--- a/soundresistant.html
+++ b/soundresistant.html
@@ -16,7 +16,7 @@
 			<div class="important-descriptor">
 				<div class="important-descriptor-title">Sound Resistant Doors</div>
 				<div class="important-descriptor-description">
-					<p>Whether you need total silence for a recording studio, major sound reduction for apartment  doors, or minor sound reduction for interior doors, Emerald has your door.  We also have sound resistance; let our experts come and evaluate your acoustical needs.</p>
+					Whether you need total silence for a recording studio, major sound reduction for apartment  doors, or minor sound reduction for interior doors, Emerald has your door.  We also have sound resistance; let our experts come and evaluate your acoustical needs.
 				</div>
 			</div>
 			<div class="page-gallery">
@@ -24,48 +24,67 @@
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">35 STC wood door- about 84% sound reduction</div>
+					<div class="card-text">
+						<div class="card-text-header">35 STC wood door</div>
+						<div class="card-text-subtext">about 84% sound reduction</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">35 STC fire rated door</div>
+					<div class="card-text">
+						<div class="card-text-header">35 STC fire rated door</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/doors/0011.jpg" class="img-responsive center-block">
 					</div>
-					<div class="card-text">35 STC door with painted gaskets and painted drop down automatic bottom</div>
+					<div class="card-text">
+						<div class="card-text-header">35 STC door</div>
+						<div class="card-text-subtext">with painted gaskets and painted drop down automatic bottom</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">42 to 45 STC door - about 94% sound reduction - drop down button is concealed</div>
+					<div class="card-text">
+						<div class="card-text-header">42 to 45 STC door</div>
+						<div class="card-text-subtext">about 94% sound reduction - drop down button is concealed</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">42-45 STC door with applied molding and gloss paint</div>
+					<div class="card-text">
+						<div class="card-text-header">42-45 STC door</div>
+						<div class="card-text-subtext">with applied molding and gloss paint</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">51 to 56 STC doors - virtual silence</div>
+					<div class="card-text">
+						<div class="card-text-header">51 to 56 STC doors</div>
+						<div class="card-text-subtext">virtual silence</div>
+					</div>
 				</div>
 				<div class="page-gallery-item card">
 					<div class="card-img">
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
-					<div class="card-text">yes we install sound resistant sheet rock</div>
+					<div class="card-text">
+						<div class="card-text-subtext">yes we install sound resistant sheet rock</div>
+					</div>
 				</div>
 				<div class="page-gallery-big-item card card-stc">
 					<div class="card-stc-header"><h1>STC Ratings Explained</h1></div>
 					<hr/>
-					<div class="card-stc-paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</div>
+					<div class="card-stc-paragraph">???????????</div>
 				</div>
 			</div>
 		</div>
