Add locks, windowgates, and violations corrected

--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
 		</div>
 		<div class="title-menu-item"><a href="windowgates.html">Window Gates</a></div>
 		<div class="title-menu-item"><a href="locks.html">Locks</a></div>
-		<div class="title-menu-item"><a href="#">Violations Corrected</a></div>
+		<div class="title-menu-item"><a href="violations.html">Violations Corrected</a></div>
 		<div class="title-menu-item"><a href="#">Contact Us</a></div>
 		<div class="title-menu-item"><a href="#">Feedback</a></div>
 	</div>
@@ -63,8 +63,9 @@
 							<li><a href="soundresistant.html">Sound Resistant Doors</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Window Gates</a></li>
-					<li><a href="#">Violations Corrected</a></li>
+					<li><a href="windowgates.html">Window Gates</a></li>
+					<li><a href="locks.html">Locks</a></li>
+					<li><a href="violations.html">Violations Corrected</a></li>
 					<li><a href="#">Contact Us</a></li>
 					<li><a href="#">Feedback</a></li>
 		  		</ul>
