--- a/soundresistant.html
+++ b/soundresistant.html
@@ -60,7 +60,7 @@
 						<img src="images/placeholder.png" class="img-responsive center-block">
 					</div>
 					<div class="card-text">
-						<div class="card-text-header">42-45 STC door</div>
+						<div class="card-text-header">42 to 45 STC door</div>
 						<div class="card-text-subtext">with applied molding and gloss paint</div>
 					</div>
 				</div>
