--- a/windowgates.html
+++ b/windowgates.html
@@ -12,11 +12,85 @@
 		<div id="header">
 		</div>
 		<div class="container">
-			<div class="page-header">
-				<h1>Window Gates</h1>
+			<div class="important-descriptor">
+				<div class="important-descriptor-title">Window Gates</div>
+				<div class="important-descriptor-description">
+					Whether you need a fire department approved keyless gate, a custom grill, or a gate door, we can make the perfect custom piece and install it within days.
+				</div>
 			</div>
-			<div class="page-description">
-				<p>Whether you need a fire department approved keyless gate, a custom grill, or a gate door, we can make the perfect custom piece and install it within days.</p>
+			<div class="page-gallery">
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/1.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Keyless gate with matching grill</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/2.gif" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Starburst gate</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/3.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Keyless hinge gate</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/4.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Keyless folding gate</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/5.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Door gate</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/6.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Double belly</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/7.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Single belly</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/8.jpg" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">AC slot</div>
+					</div>
+				</div>
+				<div class="page-gallery-item card">
+					<div class="card-img">
+						<img src="images/windowgates/9.gif" class="img-responsive center-block">
+					</div>
+					<div class="card-text">
+						<div class="card-text-header">Bay window</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
