Use ssi and add build process

--- a/locks.html
+++ b/locks.html
@@ -11,8 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	</head>
 	<body>
-		<div id="header">
-		</div>
+		<!--#include file="header.html" -->
 		<div class="container">
 			<h3>Commercial Locksmith, License #1368097</h3>
 			<p>Our licensed locksmiths can repair or replace any lock. We also install electric strikes, intercoms and card access systems.</p>
