--- a/violations.html
+++ b/violations.html
@@ -9,8 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	</head>
 	<body>
-		<div id="header">
-		</div>
+		<!--#include file="header.html" -->
 		<div class="container">
 			<h3>FDNY Violations Corrected</h3>
 			<p>We install and replace fire rated doors and frames. Low price and fast service!</p>
