--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	</head>
 	<body>
-		<div id="header"></div>
+		<!--#include file="header.html" -->
 		<div class="container">
 			<div class="page-header">
 				<h1>Welcome to Emerald Doors!</h1>
