--- a/soundresistant.html
+++ b/soundresistant.html
@@ -10,8 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.min.css" />
 	</head>
 	<body>
-		<div id="header">
-		</div>
+		<!--#include file="header.html" -->
 		<div class="container">
 			<div class="important-descriptor">
 				<div class="important-descriptor-title">Sound Resistant Doors</div>
