--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</a>
 				<a class="page-gallery-item card" href="commercial.html">
 					<div class="card-img">
-						<img src="images/doors/home 05.jpg" class="img-responsive center-block">
+						<img src="images/doors/home_05.jpg" class="img-responsive center-block">
 					</div>
 					<div class="card-text">
 						<div class="card-text-header">Heavy duty commercial doors</div>
@@ -89,7 +89,7 @@
 				</a>
 				<a class="page-gallery-item card" href="commercial.html">
 					<div class="card-img">
-						<img src="images/doors/home 07.jpg" class="img-responsive center-block">
+						<img src="images/doors/home_07.jpg" class="img-responsive center-block">
 					</div>
 					<div class="card-text">
 						<div class="card-text-header">Store front glass doors / commercial doors</div>
@@ -117,6 +117,6 @@
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script src='js/main.js'></script>
+		<script src="js/main.js"></script>
 	</body>
 </html>
