Add contact page, move commands to package.json

--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@
 		<div class="title-menu-item"><a href="windowgates.html">Window Gates</a></div>
 		<div class="title-menu-item"><a href="locks.html">Locks</a></div>
 		<div class="title-menu-item"><a href="violations.html">Violations Corrected</a></div>
-		<div class="title-menu-item"><a href="#">Contact Us</a></div>
+		<div class="title-menu-item"><a href="contact.html">Contact Us</a></div>
 		<div class="title-menu-item"><a href="#">Feedback</a></div>
 	</div>
 </div>
@@ -66,7 +66,7 @@
 					<li><a href="windowgates.html">Window Gates</a></li>
 					<li><a href="locks.html">Locks</a></li>
 					<li><a href="violations.html">Violations Corrected</a></li>
-					<li><a href="#">Contact Us</a></li>
+					<li><a href="contact.html">Contact Us</a></li>
 					<li><a href="#">Feedback</a></li>
 		  		</ul>
 			</div>
