Fill in contact us page and add feedback page

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,16 @@
 		<div class="container">
 
 			<h2>Contact Us</h2>
-			<p>Call us now from 8AM-8PM EST!  We will gladly provide phone quotes.  We are also reachable by email.</p>
+			<div class="contact-us-important-text">By Phone: 646-703-3444</div>
+			<p>Call us now from 8AM-8PM EST!  We will gladly provide phone quotes.</p>
+			<div class="contact-us-important-text">By Email: peter@emeralddoorsnyc.com</div>
+			<div class="small-horizontal-separator"></div>
+			<p>We serve all five boroughs &ndash; Queens, Manhattan, Bronx, Brooklyn, Staten Island.</p> 
+			<p>We have two locations in Queens:</p>
+			<ul>
+				<li><a  target="_blank" href="http://maps.google.com/maps?q=19-14+22nd+Drive,+Astoria+&hl=en&ll=40.779518,-73.917732&spn=0.010968,0.022724&sll=37.0625,-95.677068&sspn=46.677964,93.076172&vpsrc=6&hnear=19-14+22nd+Dr,+Astoria,+New+York+11105&t=m&z=16">19-14 22nd Drive, Astoria</a></li>
+				<li><a  target="_blank" href="http://maps.google.com/maps?q=153-01+Jamaica+Ave&hl=en&ll=40.700488,-73.799372&spn=0.043923,0.090895&sll=37.0625,-95.677068&sspn=46.677964,93.076172&vpsrc=6&hnear=153-01+Jamaica+Ave,+Queens,+New+York+11432&t=m&z=14">153-01 Jamaica Ave</a></li>
+			</ul>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
