--- a/header.html
+++ b/header.html
@@ -4,18 +4,22 @@
 		<a href="index.html"><img class="logo" src="images/logo.gif"/></a>
 		<div class="title-block-content">EMERALD DOORS</div>
 		<div class="title-block-side hidden-sm">
-			<div style="position:absolute; right: 0px; top:0px">
-				<a style="color: red" href="https://www.yelp.com/biz/emerald-doors-astoria"><img height="40" src="images/Yelp_trademark_RGB_outline.png"/></a>
+			<div class="contact-card">
+				<div style="position:absolute; right: 0px; top:0px">
+					<a style="color: red; padding: 10px;" href="https://www.yelp.com/biz/emerald-doors-astoria" target="_blank">
+						<img height="120" src="images/BIZM_20170511_PLUOY_Sticker_300x300_R1.jpg"/>
+					</a>
+				</div>
+				<img src="images/creditCardLogo.jpg" />
+				<div style="font-size: 16px; font-weight: bold">CALL US NOW 8am-8pm</div>
+				<div style="font-size: 28px; font-weight: bold">646-703-3444</div>
+				<div>Phone quotes gladly provided!</div>
+				
+				<div><a href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
+				<div>Email us at: <span style="font-weight: bold">peter@emeralddoorsnyc.com</span></div>
 			</div>
-			<img src="images/creditCardLogo.jpg" />
-			<div style="font-size: 16px; font-weight: bold">CALL US NOW 8am-8pm</div>
-			<div style="font-size: 28px; font-weight: bold">646-703-3444</div>
-			<div>Phone quotes gladly provided!</div>
-			
-			<div><a href="#">Queens/Manhattan/Bronx/Brooklyn/SI</a></div>
-			<div>Email us at: <span style="font-weight: bold">peter@emeralddoorsnyc.com</span></div>
-			
 		</div>
+		
 	</div>
 	<div class="title-black-bar"></div>
 	<div class="container title-menu">
@@ -33,7 +37,7 @@
 		<div class="title-menu-item"><a href="locks.html">Locks</a></div>
 		<div class="title-menu-item"><a href="violations.html">Violations Corrected</a></div>
 		<div class="title-menu-item"><a href="contact.html">Contact Us</a></div>
-		<div class="title-menu-item"><a href="#">Feedback</a></div>
+		<div class="title-menu-item"><a href="feedback.html">Feedback</a></div>
 	</div>
 </div>
 
@@ -67,7 +71,7 @@
 					<li><a href="locks.html">Locks</a></li>
 					<li><a href="violations.html">Violations Corrected</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
-					<li><a href="#">Feedback</a></li>
+					<li><a href="feedback.html">Feedback</a></li>
 		  		</ul>
 			</div>
 		</div>
