--- a/index.html
+++ b/index.html
@@ -12,25 +12,8 @@
 		<!--#include file="header.html" -->
 		<div class="container">
 			<h2>Welcome to Emerald Doors!</h2>
-			<div class="row visible-xs">
-				<div class="col-md-12">
-					<div class="card contact-block">
-						<div class="row">
-							<div class="col">
-								<h2>Contact Us</h2>
-								
-								<p>CALL US NOW from 8am-8pm</p>
-								<p>Phone quotes gladly provided!</p>
-								<p>Serving Queens, Manhattan, Bronx, Brooklyn, and Staten Island</p>
-								<img src="images/creditCardLogo.jpg" />
-								
-								<p>Email: peter@emeralddoorsnyc.com</p>
-								<p style="font-size:30px">Phone: 646-703-3444</p>
-								<p>Address: Queens</p>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="visible-xs visible-sm" style="font-weight: bold; padding: 8px 0px;">
+				<div>646-703-3444 | 8AM-8PM | peter@emeralddoorsnyc.com</div>
 			</div>
 			<div class="page-gallery">
 				<a class="page-gallery-item card" href="fire.html">
