--- a/feedback.html
+++ b/feedback.html
@@ -14,7 +14,7 @@
 			<h2>Feedback</h2>
 			<div>Feel free to leave your comments/feedback on our <a href="https://www.yelp.com/biz/emerald-doors-astoria" target="_blank">Yelp page</a>!</div>
 			<br/>
-			<img src="images/BIZM_20170511_PLUOY_FeaturedImage_600x412_R1.jpg" />
+			<img style="width:100%" src="images/BIZM_20170511_PLUOY_FeaturedImage_600x412_R1.jpg" />
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
