--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,6 @@
 				<li><a  target="_blank" href="http://maps.google.com/maps?q=153-01+Jamaica+Ave&hl=en&ll=40.700488,-73.799372&spn=0.043923,0.090895&sll=37.0625,-95.677068&sspn=46.677964,93.076172&vpsrc=6&hnear=153-01+Jamaica+Ave,+Queens,+New+York+11432&t=m&z=14">153-01 Jamaica Ave</a></li>
 			</ul>
 		</div>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<script src="js/main.js"></script>
+		<!--#include file="footer.html" -->
 	</body>
 </html>
